[gd_scene load_steps=14 format=1]

[ext_resource path="res://src/actors/enemies/sugarcubes_from_hell/sugarcubes_from_hell.gd" type="Script" id=1]
[ext_resource path="res://src/actors/enemies/sugarcubes_from_hell/sugarcubes_from_hell_01.png" type="Texture" id=2]
[ext_resource path="res://src/actors/enemies/sugarcubes_from_hell/sugarcubes_from_hell_02.png" type="Texture" id=3]
[ext_resource path="res://src/actors/enemies/sugarcubes_from_hell/sugarcubes_from_hell_03.png" type="Texture" id=4]
[ext_resource path="res://src/actors/enemies/sugarcubes_from_hell/sugarcubes_from_hell_04.png" type="Texture" id=5]
[ext_resource path="res://src/actors/enemies/sugarcubes_from_hell/sugarcubes_from_hell_05.png" type="Texture" id=6]
[ext_resource path="res://src/actors/enemies/sugarcubes_from_hell/sugarcubes_from_hell_06.png" type="Texture" id=7]
[ext_resource path="res://src/audio/sfx/sfx.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/actors/enemies/explosion_particle.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 18.4138, -16.5375, 20.5015, 1.67173, 9.71513, 10.7183, -3.7388, 15.4736, -23.5717, 0.975838, -21.716, -17.9292, -9.88585, -21.6407, 2.87218, -21.0608 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.5
} ]

[sub_resource type="Animation" id=3]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:monitoring")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:monitorable")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("explosion_particle:config/emitting")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:extra_motion")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( -1.86607, -1.86607 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 0, 200 ) ]
}

[node name="sugarcube" type="Area2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 3 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
collision/layers = 4
collision/mask = 3
script/script = ExtResource( 1 )
movement_speed = -80
random_y_range = 10
motion = "linear"
destroy_sound = "explode"
group = "enemy"
reset_bonus = true
shoot_interval = 1.2
health = 2

[node name="sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "default"
frame = 2
playing = true

[node name="collision" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 0, 3 )
build_mode = 0
polygon = Vector2Array( 2.87218, -21.0608, -9.88585, -21.6407, -21.716, -17.9292, -23.5717, 0.975838, -3.7388, 15.4736, 9.71513, 10.7183, 20.5015, 1.67173, 18.4138, -16.5375 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="shoot_from" type="Node2D" parent="."]

transform/pos = Vector2( -31.0824, 0.946671 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]

transform/pos = Vector2( -25.2703, 0 )
transform/scale = Vector2( 0.231525, 1 )
rect = Rect2( -30, -30, 300, 60 )

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explode = SubResource( 3 )
anims/zigzag = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sfx" parent="." instance=ExtResource( 8 )]

[node name="explosion_particle" parent="." instance=ExtResource( 9 )]

transform/pos = Vector2( -16, 0 )
transform/rot = 21.1023
config/lifetime = 6.0
config/preprocess = 2.0
config/emitting = false
config/process_mode = 1

[connection signal="area_enter" from="." to="." method="_on_sugarcube_area_enter"]

[connection signal="enter_screen" from="visibility" to="." method="_on_visibility_enter_screen"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]


